(fix): update docs and fix :ok_hand:
